# MCQEvaluations

./: .env.example.py  .gitignore  Makefile  README.md  processed_dataset.csv  prompts.py  prompts_.py  pyproject.toml  requirements.txt
mcqa/: config.py  llm_api.py  llm_router.py  logger.py  mcqa.py  mcqa_get_results.py
mcqa/application/: evaluation.py  postprocessor.py  prompt_crafter.py  prompts.py  question_formation.py
mcqa/application/input_parser/: csv_parser.py  image_parser.py  pdf_parser.py
mcqa/base/: evaluation.py  postprocessor.py  prompt_crafter.py  prompts.py  question_formation.py
mcqa/base/input_parser/: image_parser.py  parser.py  pdf_parser.py
mcqa/commons/: regex.py
mcqa/dataloaders/: CsvColumns.py  csv_loader.py
mcqa/domain/: evaluation.py  input_parser.py  mcqa.py  multimodal_response_generator.py  patterns.py  postprocessor.py  question_formation.py  response_generator.py  text_response_generator.py
mcqa/models/multimodal/: gemini_multimodal_response_generator.py  llama_multimodal_response_generator.py  openai_multimodal_response_generator.py
mcqa/models/multimodal/config/: gemini_multimodal_config.py  llama_multimodal_config.py  openai_multimodal_config.py
mcqa/models/text/: gemini_text_response_generator.py  openai_text_response_generator.py
mcqa/text/: gemini_text_response_generator.py  openai_text_response_generator.py
mcqa/text/config/: gemini_text_config.py  openai_text_config.py
models/: router.py
models/text/: gemini_text_response_generator.py  openai_text_response_generator.py
models/text/config/: gemini_text_config.py  openai_text_config.py
