[tool.poetry]
name = "ebv-llmresponse-evaluation"
version = "0.1.0"
description = "The package aims to evaluate the answers from LLM on multiple-choice questions in the cancer research."
authors = ["Sathvik Napa <sathviks@stanford.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "==2.2.2"
PyPDF2 = "==3.0.1"
python-dotenv = "==1.0.1"
google-generativeai = "==0.7.1"
openai = "==1.35.10"
fastapi = "==0.104.0"
starlette = "==0.27.0"
urllib3 = "==2.0.7"
uvicorn = "==0.23.2"
pydantic = "~2.8.2"
h11 = "~0.14.0"
numpy = "~2.0.0"
pip = "~24.0"
distro = "~1.9.0"
wheel = "~0.43.0"
rsa = "~4.9"
pyasn1 = "~0.6.0"
pytz = "~2024.1"
requests = "~2.32.3"
exceptiongroup = "~1.2.1"
sniffio = "~1.3.1"
click = "~8.1.7"
httpcore = "~1.0.5"
idna = "~3.7"
certifi = "~2024.7.4"
setuptools = "~70.0.0"
cachetools = "~5.3.3"
google-api-python-client = "~2.136.0"
httplib2 = "~0.22.0"
tqdm = "~4.66.4"
httpx = "~0.27.0"
anyio = "~3.7.1"
python-dateutil = "~2.9.0.post0"
six = "~1.16.0"
pyparsing = "~3.1.2"
uritemplate = "~4.1.1"

[tool.poetry.group.dev.dependencies]
flake8 = "==7.0.0"
black = "==24.4.2"
isort = "==5.13.2"
pytest = "==8.2.2"
pytest-cov = "==4.1.0"
pytest-instafail = "==0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
  \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | site-packages
)/
'''

pydantic~=2.8.2
openai~=1.35.10
tqdm~=4.66.4
fastapi~=0.104.0
pandas~=2.2.2
pypdf2~=3.0.1
pillow~=10.4.0
pytest~=8.2.2
h11~=0.14.0
cffi~=1.16.0
numpy~=2.0.0
ipython~=8.18.1
pip~=24.0
distro~=1.9.0
wheel~=0.43.0
tornado~=6.4.1
filelock~=3.15.4
rsa~=4.9
pyasn1~=0.6.0
pyzmq~=26.0.3
pexpect~=4.9.0
comm~=0.2.2
traitlets~=5.14.3
parso~=0.8.4
jedi~=0.19.1
pytz~=2024.1
requests~=2.32.3
exceptiongroup~=1.2.1
sniffio~=1.3.1
click~=8.1.7
httpcore~=1.0.5
pygments~=2.18.0
idna~=3.7
certifi~=2024.7.4
setuptools~=70.0.0
cachetools~=5.3.3
urllib3~=2.0.7
packaging~=24.1
google-api-python-client~=2.136.0
httplib2~=0.22.0
httpx~=0.27.0
anyio~=3.7.1
python-dateutil~=2.9.0.post0
psutil~=6.0.0
debugpy~=1.8.2
decorator~=5.1.1
wcwidth~=0.2.13
ptyprocess~=0.7.0
six~=1.16.0
pyparsing~=3.1.2
asttokens~=2.4.1
executing~=2.0.1
ipykernel~=6.29.5
uritemplate~=4.1.1
platformdirs~=4.2.2
zipp~=3.19.2
